--- a/contacts/index.html
+++ b/contacts/index.html
@@ -1,50 +1,34 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 
-  <!--
-
-  ##TAG INDEX FOR ROGER##
-
-  - #cofe - CofE news box JavaScript insert
-  - #content - content! Text etc on pages.
-  - #footer - info at foot of website, includes current year etc.
-  - #nav - links at top to pages
-  - #side - sidebar for info on home page, extra links on other pages etc
-
-  -->
-
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>St. Andrew's Church Ferring - Contacts</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <title>Contacts &mdash; St. Andrew's Church, Ferring</title>
+  <meta name="description" content="Phone numbers and addresses for staff at St. Andrew's Church, Ferring.">
+  <meta name="keywords" content="andrew, anglican, church, coast, england, ferring, parish, south, sussex, west, worthing, village, address, advertise, contact, clergy, curate, email, phone, telephone, treasurer, warden, webmaster, vicar">
+  <meta name="author" content="St. Andrew's Church, Ferring">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-
-  <!-- CSS
+  <!-- CSS & JavaScript
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="../css/normalize.css"><!-- reset file do not change -->
   <link rel="stylesheet" href="../css/skeleton.css"><!-- framework CSS -->
   <link rel="stylesheet" href="../css/style.css"><!--my additions-->
 
-  <!-- JavaScript
-  __________________________________________________ -->
-
   <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="../images/favicon.png">
+  <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
+
 <body>
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -100,7 +84,6 @@
       </div><!--Navigation area ends-->
 
     </div><!--Row ends-->
-
 
     <!--Row begins--><div class="row">
 
@@ -230,7 +213,6 @@
 
     </div><!--Row ends-->
 
-
     <!--Row begins--><div class="row">
 
       <!--Footer begins #footer--><div class="twelve columns" id="footer">
@@ -240,32 +222,34 @@
 
     </div><!--Row ends-->
 
-
   </div><!--Container ends-->
 
-  <!--fix for mobile table layout--><script>
+  
+  <script>
+    // fix for mobile table layout
+
     var headertext = [];
     var headers = document.querySelectorAll("thead");
     var tablebody = document.querySelectorAll("tbody");
 
     for (var i = 0; i < headers.length; i++) {
-    	headertext[i]=[];
-    	for (var j = 0, headrow; headrow = headers[i].rows[0].cells[j]; j++) {
-    	  var current = headrow;
-    	  headertext[i].push(current.textContent);
-    	  }
+      headertext[i]=[];
+      for (var j = 0, headrow; headrow = headers[i].rows[0].cells[j]; j++) {
+        var current = headrow;
+        headertext[i].push(current.textContent);
+        }
     }
 
     for (var h = 0, tbody; tbody = tablebody[h]; h++) {
-    	for (var i = 0, row; row = tbody.rows[i]; i++) {
-    	  for (var j = 0, col; col = row.cells[j]; j++) {
-    	    col.setAttribute("data-th", headertext[h][j]);
-    	  }
-    	}
+      for (var i = 0, row; row = tbody.rows[i]; i++) {
+        for (var j = 0, col; col = row.cells[j]; j++) {
+          col.setAttribute("data-th", headertext[h][j]);
+        }
+      }
     }
-  </script><!--end of fix script-->
+  </script>
 
 <!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 </html>
